--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,16 +8,42 @@
         <version>1.01.01-SNAPSHOT</version>
     </parent>
 
+
+
     <artifactId>demo</artifactId>
     <name>demo - microservice</name>
     <packaging>${packaging.type}</packaging>
     
     <properties>
         <dqcodegen.rest.api>false</dqcodegen.rest.api>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+            <origSourceDir>${project.basedir}/src/main/java</origSourceDir>
+            <realSourceDir>${origSourceDir}</realSourceDir>
+            <delombokSourceDir>${project.build.directory}/delombok</delombokSourceDir>
     </properties>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-maven-plugin</artifactId>
+                <version>1.18.20.0</version>
+                <executions>
+                    <execution>
+                        <id>delombok</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>delombok</goal>
+                        </goals>
+                        <configuration>
+                            <addOutputDirectory>false</addOutputDirectory>
+                            <sourceDirectory>${origSourceDir}</sourceDirectory>
+                            <outputDirectory>${delombokSourceDir}</outputDirectory>
+                            <encoding>UTF-8</encoding>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -105,6 +131,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
