--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -13,6 +13,14 @@ spring:
   profiles:
     include: shared
 
+  application:
+    name: eureka-client-service
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
 
 mdpauditlib:
   serviceName: ${SERVICE_NAME:demo}
