--- a/service/src/main/resources/application-dev.yml
+++ b/service/src/main/resources/application-dev.yml
@@ -41,6 +41,13 @@ spring:
           time_zone: UTC
           lob:
             non_contextual_creation: true
+  application:
+    name: demo
+
+eureka:
+  client:
+    service-url:
+      efaultZone: http://localhost:8761/eureka/
 
 # Oracle
 #  datasource:
